fix: get rid of duplicated scrollbars [YTFRONT-4840]

--- a/packages/ui/src/ui/pages/components/tabs/nodes/NodeCard/NodeCard.scss
+++ b/packages/ui/src/ui/pages/components/tabs/nodes/NodeCard/NodeCard.scss
@@ -1,7 +1,7 @@
 .node-card {
     $meta-table: '.meta-table-item';
 
-    height: calc(100vh - 50px);
+    height: calc(100vh - var(--app-header-height) - var(--app-footer-height));
     width: 100%;
     padding: 0 20px;
 
